--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,8 +1,13 @@
+$blue: rgb(0, 164, 230);
+
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+  color: $blue;
+}
+
+.grid {
+  display: flex;
 }
